# sendinput

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  appveyor_build.bat  command.h  crc32.h  mouse.h  sendinput.c  sendinput.h  sendinput_io.c  sendkey.h
